# FroggyTV

./: .gitignore  README.md  Screens.py  bpm.py  code.py  hardware.py  noxfile.py  old_code.py  output.py  pyproject.toml  screens.py  state.py
Fonts/: Frog-PrincessSmol-6.pcf  FrogPrincess-12.pcf
Icons/: RibbitSpritesheet.ase
src/: code.py  debug.py  screens.py
src/Fonts/: MagicForest-12.bdf
src/froggytv/: bpm.py  callables.py  code.py  debug.py  hardware.py  screens.py  state.py  tickables.py  triggers.py
tests/: conftest.py  test_callables.py  test_tickables.py  test_triggers.py
tests/helpers/: utils.py
