[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FroggyTV"
version = "0.0.1"

[tool.pytest.ini_options]
pythonpath = "src tests"
addopts = ["--import-mode=importlib"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["old_code.py"]
reportGeneralTypeIssues = "none"
reportMissingImports = "none"
